--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^5.2.0",
     "antd": "^5.22.3",
     "bcryptjs": "^2.4.3",
+    "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -21,6 +22,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
     "react-icons": "^5.4.0",
+    "react-phone-input-2": "^2.15.1",
     "react-quill": "^2.0.0",
     "stripe": "^17.4.0"
   }
