--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "@stripe/stripe-js": "^5.2.0",
     "antd": "^5.22.3",
     "bootstrap-icons": "^1.11.3",
+    "classnames": "^2.5.1",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-phone-input-2": "^2.15.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.2",
     "react-slick": "^0.30.2",
