Update docker-compose.yml ensonki

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   backend:
-    image: accvalorant/backend
+    image: accvalo/backend
     build:
       context: .
       no_cache: true
