--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -54,7 +54,7 @@ pipeline {
 
 def buildCompose() {
     sh "cd backend/"
-    sh "docker-compose --file=backend/docker-compose.yml build"
+    sh "docker-compose --file=backend/docker-compose.yml build --no-cache"
 }
 
 def runCompose() {
