--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.2",
