--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,5 @@ MONGO_URI="mongodb+srv://burikcankorpinar7:0K156xVYHj8cV5hn@burakcankrpnr.f18ti.
 CLIENT_DOMAIN="https://api.accvalo.shop"
 
 # Shopier API bilgileri (opsiyonel: kod içerisinde sabit olarak kullanmak yerine burada tanımlayabilirsiniz)
-SHOPIER_API_USER="6c52b3292d9b8f4fc0fbfabd6678efec"
+SHOPIER_API_KEY="6c52b3292d9b8f4fc0fbfabd6678efec"
 SHOPIER_API_PASSWORD="dd98a561a4b2754f4af675d133b45191"
